[gd_scene format=3 uid="uid://cgsnaw31uqbsn"]

[ext_resource type="Script" uid="uid://scukwlgdeitm" path="res://levels/level_transition.gd" id="1_8krqk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wwod"]
size = Vector2(32, 32)

[node name="LevelTransition" type="Node2D" unique_id=1965396953]
script = ExtResource("1_8krqk")

[node name="LtArea" type="Area2D" parent="." unique_id=1251861277]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="LtCShape" type="CollisionShape2D" parent="LtArea" unique_id=1067446322]
unique_name_in_owner = true
position = Vector2(16, -16)
shape = SubResource("RectangleShape2D_4wwod")
debug_color = Color(0.9550459, 0.4094053, 0.69794196, 0.41960785)

[connection signal="body_entered" from="LtArea" to="." method="_on_lt_area_body_entered"]
